# claude-trader

./: .env.example  .env.testnet-bybit  .gitignore  CLAUDE_TASK.md  OPUS_REVIEW.md  README.md  RESEARCH_NOTES.md  STRATEGY_CONTRARIAN.md  STRATEGY_DESIGN.md  alpaca-claude-trader-plan.md  binance-claude-trader-plan.md  handoff.md  pyproject.toml
.serena/: project.yml
alpaca_cli/: __init__.py  alpaca.py
backtester/: __init__.py  backtest.py
backtester/results/: backtest_20260420_095601.json  full_backtest_13pairs_6mo.json
binance_cli/: __init__.py  binance.py
exchange_cli/: __init__.py  bybit.py
kronos_model/: __init__.py  kronos.py  module.py
strategy/: __init__.py  config.py  engine.py  indicators.py  kronos_signal.py  opus.py  params.json  review.py  risk.py  sentiment.py
tests/: test_engine_risk.py  test_smoke.py
trader/: __init__.py  discord_notify.py  log.py  notify.py  opus_reviewer.py  runner.py  ws_watcher.py
trades/: baseline.json  portfolio-state.json
trades/learnings/: 2026-04-18-16-37.md  2026-04-19-00-07.md  2026-04-19-01-52.md  2026-04-19-02-07.md  2026-04-19-03-07.md  2026-04-19-04-52.md  2026-04-19-05-37.md  cycle-2026-04-19-06-07.md  cycle-2026-04-19-07-37.md  session-2026-04-19-00-22.txt
