[project]
name = "claude-trader"
version = "0.1.0"
description = "Kronos ensemble trading system on Binance Testnet"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-binance>=1.0.19",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pytz>=2024.0",
    "torch>=2.5.0",
    "transformers>=4.46.0",
    "safetensors>=0.4.0",
    "einops>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
]

[project.scripts]
binance = "binance_cli.binance:cli"
trader = "trader.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["binance_cli", "kronos_model"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
